fix: revisão completa — bugs de segurança, parsing e design
- WebhookValidator.secureEqual: restaura SHA-256 pre-hash para garantia
  constant-time incondicional; remove digest.reset() redundante (dead code)
- BulkOperationsClient.hasAtomicResults: substitui contains() por
  MinimalJsonParser.parseObject() para evitar falsos positivos; ampliar
  catch para RuntimeException cobre NumberFormatException de tokens numéricos
- HttpClient.buildUrl: evita '?' órfão quando todos os valores são null;
  URLEncoder usa StandardCharsets.UTF_8 eliminando catch silencioso
- Instrumentation.safeInvoke: loga stack trace completo (Level.WARNING + Throwable)
- ResourceQuery.include: guard para array types null
- JsonApiParser.firstData: mensagem de erro mais descritiva
- Metadata.fromMap: retorna empty() em vez de null para mapa vazio
- RequirementTest.createRubricateAcceptsPages: verifica objeto e atributo pages
- ClicksignClient, ClientConfig: remove javadocs redundantes sem informação adicional

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>